# LLM_ENV

./: README.md  pyproject.toml
examples/: run_smoke_test.py
src/debate_rl/: __init__.py
src/debate_rl/agents/: judge.py  opponent_policy.py
src/debate_rl/prompts/: system_prompts.yaml
src/debate_rl/training/: rollout.py  setup.py
src/debate_rl/utils/: api.py
tests/: test_smoke.py
