[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "debate-rl"
version = "0.0.1"
description = "Mock multi-turn debate rollout compatible with OpenPipe ART."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
